@@ -1,2 +1,3 @@
 2009-01-13 - Sean Huber (shuber@huberry.com)
   * Initial commit
+  * Add logic and update README
